# texman

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: build.rs  cli.rs  init.rs  lib.rs  main.rs  workspace.rs
src/templates/: doc.tera.fdb_latexmk  doc.tera.fls  doc.tera.tex
