[package]
name = "texman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
color-eyre = "0.6.1"
once_cell = "1.10.0"
owo-colors = "3.3.0"
serde = { version = "1.0.136", features = ["derive"] }
tera = "1.15.0"
thiserror = "1.0.30"
toml = "0.5.9"
xshell = "0.2.1"
